--- a/mepa/README.adoc
+++ b/mepa/README.adoc
@@ -1,9 +1,9 @@
 // Copyright (c) 2004-2020 Microchip Technology Inc. and its subsidiaries.
 // SPDX-License-Identifier: MIT
 
-= MESA README
+= MEPA README
 
-See the mesa-doc.html (this can be found in the released artifacts) file for
+See the mepa-doc.html (this can be found in the released artifacts) file for
 read-me, getting started documentation and more information.
 
 License information, see LICENSE.
