--- a/mepa/docs/introduction.adoc
+++ b/mepa/docs/introduction.adoc
@@ -89,7 +89,7 @@ A snippet is shown below:
 ----
    mepa_drivers_t phy_lib[PHY_FAMILIES] = {};
    phy_lib[0] = mepa_mscc_driver_init();     // Legacy VSC Tesla, Viper, etc.
-   phy_lib[1] = mepa_lan8814_driver_init();  // Indy
+   phy_lib[1] = mepa_lan8814_driver_init();  // LAN8814
 ----
 As a minimum, Each PHY driver needs to implement the following methods for
 configuration:
@@ -114,7 +114,7 @@ usage.
 
 An example of the registration for the Legacy VSC PHYs(VSC8574/Tesla,
 VSC8584/Viper..etc) can be found in the API function `mepa_mscc_driver_init`
-and registration for LAN8814/Indy is found in the `mepa_lan8814_driver_init`.
+and registration for LAN8814 is found in the `mepa_lan8814_driver_init`.
 To link each port to its corresponding MEPA driver, the phy id needs to be
 detected from IEEE standard registers 2,3.
 
@@ -122,7 +122,7 @@ This detected phy id and corresponding phy id information from the entry point
 function are compared to determine if this is a matching phy driver. Once
 matched, the function registered for `mepa_create()` API will need to be
 called by the application and passing necessary information for access.
-The registered probe function for the Indy PHY is: `indy_probe` located
+The registered probe function for the LAN8814 PHY is: `lan8814_probe` located
 in: `<mepa/src/microchip/lan8814.c>`. while the corresponding probe function
 for VSC8574 is `mscc_1g_probe` located in: `<mepa/src/vtss.c>`.
 
@@ -136,7 +136,7 @@ in: `<meba/src/drivers/phy.c>`.
 There is also an additional linking of the base port to the other ports on the
 PHY and this is accomplished using `mepa_driver_link_base_port_t` API.
 
-The Lan8814/Indy API uses miim controller to access registers. As part of
+The Lan8814 API uses miim controller to access registers. As part of
 `mepa_create()` arguments, miim-controller, port miim address, callbacks
  for miim_read and miim_write need to be passed for register access.
 synchronization callbacks for lock_enter and lock_exit need to be passed.
